fix fotter colors & alignments

--- a/_sass/new_web/components/_footer-2.scss
+++ b/_sass/new_web/components/_footer-2.scss
@@ -1,5 +1,13 @@
 footer {
   padding-bottom: 50px;
+  @include media-breakpoint-down(md) {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+}
+footer .double_logo {
+  filter: grayscale(1);
+  opacity: 0.8;
 }
 footer .divider-1 {
   opacity: 0.2;
@@ -13,6 +21,7 @@ footer .divider-1 {
 footer .divider-2 {
   opacity: 0.1;
   border-top: 1px solid #333a57;
+  margin-bottom: 25px;
 }
 footer .contact-details {
   font-size: 14px;
@@ -22,8 +31,13 @@ footer .contact-details a {
 }
 footer .nav-link {
   font-size: 14px;
-  color: #292f47;
+  color: #292f47 !important;
   padding: 0;
+  opacity: 1;
+}
+footer a {
+  color: #292f47 !important;
+  opacity: 1;
 }
 footer .copyright {
   color: #afafbf;
